--- a/packages/jupyter/package.json
+++ b/packages/jupyter/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@yuuno/net": "1.3.0",
+    "@yuuno/clip": "1.3.0",
     "@jupyter-widgets/base": "^1.2.2",
     "downloadjs": "^1.4.7",
     "jimp": "^0.5.6",
